--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Flickster</string>
+    <string name="textview">TextView</string>
+    <string name="aquaman">Aquaman</string>
+    <string name="todo">TODO</string>
 </resources>
